--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <a href="/login">
+    <a href="{{ url_for('usuario.login') }}">
       <button>Login</button>
     </a>
-    
-    <a href="/cadastro">
+
+    <a href="{{ url_for('usuario.cadastro') }}">
       <button>Cadastro</button>
     </a>
      <a href="/Index">
