--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 <div class="container" id="login-container">
   <h2>Login</h2>
 
-  <form action = "/acesso" id="login-form" method="POST">
+  <form action="{{ url_for('usuario.acesso') }}" id="login-form" method="POST">
     <label for="login">Usuário</label>
     <input type="text" id="login" name="login" placeholder="Digite seu usuário" required />
 
