--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <a href="{{ url_for('usuario.cadastro') }}">
       <button>Cadastro</button>
     </a>
-     <a href="/Index">
+     <a href="/">
       <img src="https://icons8.com/icon/44024/menu" alt="">
      </a>
     
