--- a/templates/servicos.html
+++ b/templates/servicos.html
@@ -13,9 +13,9 @@
 
   <nav class="main-nav">
     <ul>
-      <li><a href='/meus_dados'>Meus Dados</a></li>
-      <li><a href='/carrinho'>Carrinho</a></li>
-      <li><a href="{{ url_for('usuario.logout') }}">Minhas Compras</a></li>
+      <li><a href="{{ url_for('usuario.meus_dados') }}">Meus Dados</a></li>
+      <li><a href="/">Carrinho</a></li>
+      <li><a href="/">Minhas Compras</a></li>
       <li><form action="{{ url_for('usuario.logout') }}" method="post">
         <button type="submit" class="logout-button">Sair</button>
       </form></li>
